fixed header and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -50,41 +50,83 @@ a {
   color: var(--text-color);
 }
 
+h1 {
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 18px;
+}
+
 /* Header card */
 
-.profile {
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+
+  display: flex;
+  gap: 16px;
+  align-items: center;
+
+  background-color: var(--card-color);
+  border: 2px solid var(--border-color);
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.sticky-header figure {
+  width: 33%;
+  margin: 0;
+  height: 100%;
+}
+
+.general-info {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 8px;
+}
+
+.important-info {
+  display: flex;
+  gap: 8px;
+  align-items: start;
+}
+
+.important-info p {
+  background-color: var(--bg-color);
+  padding: 8px 16px;
+  border-radius: 1rem;
+}
+
+/* Bio */
+
+.bio {
   background-color: var(--card-color);
   border: 2px solid var(--border-color);
   border-radius: 1rem;
   padding: 16px;
+  margin-bottom: 16px;
 }
 
-.profile-top {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 16px;
-}
-
-.bio {
-  border-top: 2px solid var(--border-color);
-}
 
 .photo {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
-  border-radius: 0.5rem;
+  border-radius: 50%;
   border: 3px solid var(--accent-color);
 }
 
 /* Meet cards */
 
 .meets {
-  margin-top: 1.5rem;
+  margin-top: 16px;
 }
 
 .meets h2 {
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
   font-size: 1.4rem;
   border-bottom: 2px solid var(--accent-color);
   padding-bottom: 0.25rem;
